@@ -1,3 +1,11 @@
+[b]Version 0.5.61[/b] (not released yet):
+
+(2007-09-19)
+ * Fix: Don't try to connect in main.cpp to another running instance if
+   the single instance is disabled! That also means that the command line
+   option -send-action won't work in that case.
+
+
 [b]Version 0.5.60[/b]:
  * Updated the Japanese and French translations.
 
